feature: delete post , report pot , delete comment , user about form , resolve bug on comment

--- a/frontend/src/pages/home/index.scss
+++ b/frontend/src/pages/home/index.scss
@@ -200,6 +200,8 @@
           }
           img {
             width: 60px;
+            height: 60px;
+            object-fit: cover;
             border-radius: 50%;
             float: left;
             margin-right: 1em;
